objects/Case.object
<CustomObject>
    <fields>
        <fullName>Desk_Address_Code__c</fullName>
        <label>Desk Address Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>Case creator Email (If Sharing Login)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Edit_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <description>Estimate the total amount of time a project will require from all members of the team: product, design, and engineering. Estimated as a number of “person-months”, or the work that one team member can do in a month.</description>
        <inlineHelpText>Estimate the total amount of time a project will require from all members of the team: product, design, and engineering. Estimated as a number of “person-months”, or the work that one team member can do in a month.</inlineHelpText>
        <label>Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Signature__c</fullName>
        <label>Email Signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity 10</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Client Statement Information</relationshipLabel>
        <relationshipName>Cases10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity 11</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Client Statement Information</relationshipLabel>
        <relationshipName>Cases11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity 12</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Client Statement Information</relationshipLabel>
        <relationshipName>Cases12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Processor_Assigned__c</fullName>
        <label>Entity Processor Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alvin Lam</fullName>
                </value>
                <value>
                    <fullName>Amy Kasprzyk</fullName>
                </value>
                <value>
                    <fullName>Deborah Lewis</fullName>
                </value>
                <value>
                    <fullName>James Morris</fullName>
                </value>
                <value>
                    <fullName>Jamie Sylvester</fullName>
                </value>
                <value>
                    <fullName>Julianna Orozco</fullName>
                </value>
                <value>
                    <fullName>Kelly Purtle</fullName>
                </value>
                <value>
                    <fullName>Megan Fenn</fullName>
                </value>
                <value>
                    <fullName>Randall Ritchie</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Ari Vogan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Case_Details__c</fullName>
        <description>Includes Event Type;Event Venue Address;Contact Person for the Event;Contact Email Address;Contact Phone Number;Program/Meeting description for online calendar of events;If you&apos;d like to schedule a recurring event, please enter the desired additional dates and times below;Estimated number of people attending;Room Setup;</description>
        <inlineHelpText>Includes Event Type;Event Venue Address;Contact Person for the Event;Contact Email Address;Contact Phone Number;Program/Meeting description for online calendar of events;If you&apos;d like to schedule a recurring event, please enter the desired additional date</inlineHelpText>
        <label>Event Case Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_End_Date_And_Time_Choice_2__c</fullName>
        <label>Event End Date And Time Choice 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_End_Date_And_Time__c</fullName>
        <description>Event End Date</description>
        <inlineHelpText>Event End Date</inlineHelpText>
        <label>Event End Date And Time Choice 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Needs__c</fullName>
        <description>Includes A/V Needs: Select Desired Equipment;Food and Beverage Needs;List Other Food and Beverage Needs;Staff Needs;Registration Requirements;Supplies, Equipment, Handouts</description>
        <label>Event Needs</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date_and_Time__c</fullName>
        <description>Event start Date</description>
        <inlineHelpText>Event start Date</inlineHelpText>
        <label>Event Start Date and Time choice 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date_and_Time_choice_2__c</fullName>
        <label>Event Start Date and Time choice 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Includes Advisors ;Speakers List</description>
        <inlineHelpText>Includes Advisors ;Speakers List</inlineHelpText>
        <label>Event Advisors And Speakers List</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Federal_Return_Due_Date_10__c</fullName>
        <label>Federal Return Due Date 10</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Return_Due_Date_11__c</fullName>
        <label>Federal Return Due Date 11</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Return_Due_Date_12__c</fullName>
        <label>Federal Return Due Date 12</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Rate_Hours_Last_Updated__c</fullName>
        <label>Flat Rate Hours Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Survey__c</fullName>
        <formula>&quot;https://www.tfaforms.com/4879337?cid=&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Desk Survey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Internal_Note__c</fullName>
        <label>Helpdesk Internal Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Priority_Used__c</fullName>
        <label>Helpdesk Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 - Critical</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Urgent</fullName>
                </value>
                <value>
                    <fullName>Level 3 - High</fullName>
                </value>
                <value>
                    <fullName>Level 4 - Medium</fullName>
                </value>
                <value>
                    <fullName>Level 5 - New Idea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Cases__c</fullName>
        <label>High Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Required__c</fullName>
        <label>Hours Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Taken__c</fullName>
        <description>Calculates the business hours (8 AM to 5 PM) it takes to answer a Platinum Question</description>
        <formula>9 *( (5*FLOOR(( DATEVALUE( IF(ISNULL( Case_Comment_Public__c ), NOW(), Case_Comment_Public__c) ) -DATE(1900,01,01))/7) 
        +
        MIN(5, 
        MOD(DATEVALUE( IF(ISNULL(Case_Comment_Public__c), NOW(), Case_Comment_Public__c) )-DATE(1900,01,01), 7) +
        MIN(1, 24/ 9 *(MOD( IF(ISNULL(Case_Comment_Public__c), NOW(), Case_Comment_Public__c) -DATETIMEVALUE(&apos;1900-01-01 15:00:00&apos;), 1)))
        ))

        -

        (5*FLOOR((DATEVALUE( CreatedDate)-DATE(1900,01,01))/7) +
        MIN(5, 
        MOD(DATEVALUE( CreatedDate )-DATE(1900,01,01), 7) +
        MIN(1, 24/ 9 *(MOD( 
        IF(
       VALUE(MID(TEXT(CreatedDate), 12, 2)) &lt; 15, DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate)) &amp; &quot; 15:00:00&quot;),
        CreatedDate) -DATETIMEVALUE(&apos;1900-01-01 15:00:00&apos;)
        , 1)
        ))))
        )</formula>
        <inlineHelpText>How many business hours (8 AM to 5PM, M-F) it took to answer the Platinum Q.</inlineHelpText>
        <label>Hours Taken</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete__c</fullName>
        <formula>(ClosedDate - CreatedDate) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours to Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_users_are_impacted__c</fullName>
        <label>How many users are impacted?</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>How much will this project increase conversion rate (external) when a customer encounters it or improve employee efficiency (internal) during the day?

Massive — 3x 
High — 2x
Medium — 1x
Low — 0.5x
Minimal — 0.25x</description>
        <inlineHelpText>How much will this project increase conversion rate (external) when a customer encounters it or improve employee efficiency (internal) during the day?

Massive — 3x 
High — 2x
Medium — 1x
Low — 0.5x
Minimal — 0.25x</inlineHelpText>
        <label>Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Info_Sent_to_ABA_By__c</fullName>
        <description>How the client gives us access to their documentation to do their books.</description>
        <inlineHelpText>How the client gives us access to their documentation to do their books.</inlineHelpText>
        <label>Info Sent to ABA By</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_currently_a_workaround__c</fullName>
        <label>Is there currently a workaround?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Known Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Survey_Sent__c</fullName>
        <description>Pulls the date / time of the last survey sent from the account to the case.</description>
        <formula>Account.Last_Survey_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Survey Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_billed_to_Tax_Package__c</fullName>
        <label>Last billed to Tax Package</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Law_Coordinator__c</fullName>
        <formula>TEXT(Account.Assigned_CSR__c)</formula>
        <label>Client Success Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_Trust_Attorney__c</fullName>
        <formula>TEXT(Related_Entity__r.LivingTrustAttorney__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Living Trust Attorney</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Made_By_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Made By Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Lead_Source__c</fullName>
        <label>Main Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Main_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Case_Details__c</fullName>
        <description>Describes the Project Name;Project Type;Which department will be paying for this project?;Project Description;Project Audience;Project Value;Any other information you would like to share with the Marketing &amp; Communications team</description>
        <label>Marketing Case Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medium_Cases__c</fullName>
        <label>Medium Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mirror_field_display__c</fullName>
        <formula>IF(ISBLANK(Account.Platinum__c),(Account.Unlimited_LLC__c),Account.Platinum__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mirror field display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Flat_Rate_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Flat Rate Hours</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_CAM__c</fullName>
        <description>SCH-0032
Show the CAM that owned the Case when the Welcome Call NPS survey was sent.</description>
        <label>NPS CAM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Closed__c</fullName>
        <label>NPS Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Record_Type__c</fullName>
        <label>NPS Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <inlineHelpText>Scale of 1-10, Would the client recommend us?</inlineHelpText>
        <label>NPS Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Source__c</fullName>
        <formula>TEXT(Survey__r.Source__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Task_Due_Date__c</fullName>
        <label>Nearest Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Idea_Priority__c</fullName>
        <label>New Idea Priority</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Severity_Level__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 - High Impact</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Medium Impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Ideas__c</fullName>
        <label>New Ideas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <inlineHelpText>Must be shorter than 255 characters, including spaces.</inlineHelpText>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Entities__c</fullName>
        <inlineHelpText>Number of Quickbook files the client has us work on.</inlineHelpText>
        <label>Number of Entities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_to_Service__c</fullName>
        <formula>Date_to_Service__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open to Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>LeadCampaignSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pair_Programmer__c</fullName>
        <label>Pair Programmer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>System_Change_Required__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Caleb</fullName>
                </value>
                <value>
                    <fullName>Grady</fullName>
                </value>
                <value>
                    <fullName>Kazim</fullName>
                </value>
                <value>
                    <fullName>Nick</fullName>
                </value>
                <value>
                    <fullName>Rabeea</fullName>
                </value>
                <value>
                    <fullName>Romel</fullName>
                </value>
                <value>
                    <fullName>Sami</fullName>
                </value>
                <value>
                    <fullName>Shobi</fullName>
                </value>
                <value>
                    <fullName>Swarna</fullName>
                </value>
                <value>
                    <fullName>Umar</fullName>
                </value>
                <value>
                    <fullName>Wakeel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Details_AffOnboarding__c</fullName>
        <label>Contact Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Id__c</fullName>
        <formula>Contact.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Hours__c</fullName>
        <inlineHelpText>For projected number of hours this task may take. Specifically used for tax prep.</inlineHelpText>
        <label>Projected Hours</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue_Length__c</fullName>
        <label>Queue Length</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Password__c</fullName>
        <label>QuickBooks Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Version__c</fullName>
        <label>QuickBooks Version</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QB Desktop</fullName>
                </value>
                <value>
                    <fullName>QBO</fullName>
                </value>
                <value>
                    <fullName>QB Enterprise</fullName>
                </value>
                <value>
                    <fullName>Remote In</fullName>
                </value>
                <value>
                    <fullName>Portable Copy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RICE_Score__c</fullName>
        <description>Reach * Impact * Confidence / Effort = RICE Score. Pick the item with the highest RICE score to work on first.</description>
        <formula>IF(
OR(ISBLANK(Reach__c), ISBLANK(Impact__c)), 

0, Reach__c *  Impact__c)</formula>
        <inlineHelpText>Reach * Impact * Confidence / Effort = RICE Score. Pick the item with the highest RICE score to work on first.</inlineHelpText>
        <label>RICE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_Evaluation_Date__c</fullName>
        <description>SCH-0029</description>
        <label>Re-Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reach__c</fullName>
        <description>How many customers will this project impact over a single quarter?</description>
        <inlineHelpText>How many customers will this project impact over a single quarter?</inlineHelpText>
        <label>Reach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Living Trust Cases</description>
        <label>Related Entity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That entity is not a Living Trust. This field requires a Living Trust entity.</errorMessage>
            <filterItems>
                <field>Entities__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Living Trust, Land Trust</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Cases (Related Entity)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_User__c</fullName>
        <formula>IF(

$User.Id = Owner:User.Id ||
/* $User.FirstName+$User.LastName = Owner:User.FirstName+Owner:User.LastName || */

If( CONTAINS( Owner:User.Username, &quot;+lex@andersonadvisors.com&quot;),
If((Owner:User.FirstName + SUBSTITUTE( Owner:User.LastName , &quot; (LEX)&quot;, &quot;&quot;) )= ($User.FirstName + $User.LastName ),True,False),If((Owner:User.FirstName+ Owner:User.LastName)=($User.FirstName + SUBSTITUTE( $User.LastName , &quot; (LEX)&quot;, &quot;&quot;) ),True,false))
,
1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restricted_Access_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Client is only viewable by limited users that have been granted permission through Sharing Rules or Manual Sharing.</inlineHelpText>
        <label>Restricted Access Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Due_Dates__c</fullName>
        <formula>&quot;Entity_1__r.Federal_Return__c&quot; + BR() +
&quot;Entity_2__r.Federal_Return__c&quot; + BR() +
&quot;Entity_3__r.Federal_Return__c&quot; + BR() +
&quot;Entity_4__r.Federal_Return__c&quot; + BR() +
&quot;Entity_5__r.Federal_Return__c&quot; + BR() +
&quot;Entity_6__r.Federal_Return__c&quot; + BR() +
&quot;Entity_7__r.Federal_Return__c&quot; + BR() +
&quot;Entity_8__r.Federal_Return__c&quot; + BR() +
&quot;Entity_9__r.Federal_Return__c&quot; + BR() +
&quot;Entity_10__r.Federal_Return__c&quot; + BR() +
&quot;Entity_12__r.Federal_Return__c&quot; + BR() +
&quot;Entity_12__r.Federal_Return__c&quot; + BR() +
&quot;Entity_13__r.Federal_Return__c&quot; + BR() +
&quot;Entity_14__r.Federal_Return__c&quot; + BR() +
&quot;Entity_15__r.Federal_Return__c&quot; + BR() +
&quot;Entity_16__r.Federal_Return__c&quot; + BR() +
&quot;Entity_17__r.Federal_Return__c&quot; + BR() +
&quot;Entity_18__r.Federal_Return__c&quot; + BR() +
&quot;Entity_19__r.Federal_Return__c&quot; + BR() +
&quot;Entity_20__r.Federal_Return__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Due Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <description>Indicate the answer sent to the client has been reviewed and the reviewer.</description>
        <label>Reviewed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Toni Covey</fullName>
                </value>
                <value>
                    <fullName>Eliot Thomas</fullName>
                </value>
                <value>
                    <fullName>Amanda Wynalda</fullName>
                </value>
                <value>
                    <fullName>Aaron Soffer</fullName>
                </value>
                <value>
                    <fullName>Carl Zoellner</fullName>
                </value>
                <value>
                    <fullName>Gary McHenry</fullName>
                </value>
                <value>
                    <fullName>Keiara Stevenson</fullName>
                </value>
                <value>
                    <fullName>Sergey Garanyants</fullName>
                </value>
                <value>
                    <fullName>Tracy Cooklin</fullName>
                    <isActive>false</isActive>
                    <label>Tracy Cooklin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Input the team member who will be reviewing the work.</inlineHelpText>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>MOD(VALUE(Case_Number__c) ,3) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>2nd Related Sale to Case</inlineHelpText>
        <label>2nd Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases (2nd Sale)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3rd Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases (3rd Sale)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>4th Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases (4th Sale)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>